# alldeals-ng

./: Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.envs/.local/: .caddy
.github/workflows/: docker-push.yml  lint.yml
api/: Dockerfile  app.py  crud.py  models.py  pyproject.toml  schemas.py  scraper.py
caddy/: Caddyfile
charts/alldeals/: Chart.yaml  values.yaml
charts/alldeals/templates/: NOTES.txt  _helpers.tpl  api-svc.yaml  api.yaml  frontend-svc.yaml  frontend.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
solid/: .eslintrc.cjs  Dockerfile  bun.lockb  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
solid/src/: App.jsx
